# ml-nb

./: .gitignore  01. gradient_descent.ipynb  02. gradient_descent_scikit-learn.ipynb  07. tensorflow_linear_regression.ipynb  09. tensorflow_softmax.ipynb  10. decision_boundary_review.ipynb  11. model_evaluation_linear_regression.ipynb  12. model_evaluation_nerual_network.ipynb  13. decision_tree_titanic.ipynb  14. decision_tree_metrics.ipynb  15. K-means_step_by_step.ipynb  16. gaussian_distribution.ipynb  17a. collaborative_filtering.ipynb  17b. collaborative_filtering_test.ipynb  18. PCA_feature_reduction.ipynb  5. tensorflow_keras_layers.ipynb  6. forward_propagation.ipynb  7. tensorflow_linear_regression.ipynb  8. gradient_descent_review.ipynb  A01. backprop_hardcoding.ipynb  A02. q-table.py  A02. reinforement_learning_taxi.py  A03. netural_network_from_scratch.ipynb  A03. neutral_network_from_scratch.ipynb  A04. backprop_simple_tensor.ipynb  A04. netural_network_from_scratch.ipynb  README.md  gradient_descent_logistic.ipynb  gradient_descent_logistic_scikit-learn.ipynb  gradient_descent_scikit-learn.ipynb  pyproject.toml
.ipynb_checkpoints/: forward_propagation-checkpoint.ipynb
