[project]
name = "ml-specialisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25[full]>=0.3.9",
    "gymnasium[box2d]>=1.3.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "swig>=4.4.1",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "weaviate-client[agents]>=4.21.3",
]
